--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Roberta Schultz - Visual Designer</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Visual Designer in Toronto, Canada">
     <meta name="author" content="Roberta Schultz">
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <img class="logo" src="images/logo.png" alt="Roberta Schultz Visual Designer Logo">
+      <img class="logo" src="../images/logo.png" alt="Roberta Schultz Visual Designer Logo">
           <nav>
             <ul>
               <li><a href="index.html" class="navlink">Home</a></li>
@@ -91,7 +91,7 @@
   </section>
 
     <footer>
-      <a href="index.html"><img src="images/logo.png" alt="Roberta Schultz Logo"></a>
+      <a href="index.html"><img src="../images/logo.png" alt="Roberta Schultz Logo"></a>
        <p>© 2017 All Rights Reserved to Roberta Schultz</p>
     </footer>
 
