--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Roberta Schultz - Visual Designer</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Visual Designer in Toronto, Canada">
     <meta name="author" content="Roberta Schultz">
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <img class="logo" src="images/logo.png" alt="Roberta Schultz Visual Designer Logo">
+      <img class="logo" src="../images/logo.png" alt="Roberta Schultz Visual Designer Logo">
           <nav>
             <ul>
               <li><a href="index.html" class="navlink">Home</a></li>
@@ -24,22 +24,22 @@
     </header>
 
     <section class="portfolio">
-      <img class="lrg-img" src="images/myid01_570x570.jpg" alt="My ID App">
+      <img class="lrg-img" src="../images/myid01_570x570.jpg" alt="My ID App">
       <div class="ptf-imgs">
-        <img src="images/signaturebooks05_270x270.jpg" alt="Signature Books">
-        <img src="images/baskerroad02_270x270.jpg" alt="Basker Road Templates">
-        <img src="images/logos01.png" alt="Logos">
-        <img src="images/calendar01_270x270.jpg" alt="Signature Caledar 2016">
+        <img src="../images/signaturebooks05_270x270.jpg" alt="Signature Books">
+        <img src="../images/baskerroad02_270x270.jpg" alt="Basker Road Templates">
+        <img src="../images/logos01.png" alt="Logos">
+        <img src="../images/calendar01_270x270.jpg" alt="Signature Caledar 2016">
       </div>
       <div class="ptf-imgs">
-        <img src="images/mackinsey.jpg" alt="McKinsey Branding">
-        <img src="images/ananas01_270x270.jpg" alt="Ananas Editorial">
+        <img src="../images/mackinsey.jpg" alt="McKinsey Branding">
+        <img src="../images/ananas01_270x270.jpg" alt="Ananas Editorial">
       </div>
-      <img class="lrg-img" src="images/jiving_banner.png" alt="Jiving Visual Identity">
+      <img class="lrg-img" src="../images/jiving_banner.png" alt="Jiving Visual Identity">
     </section>
 
     <footer>
-      <a href="index.html"><img src="images/logo.png" alt="Roberta Schultz Logo"></a>
+      <a href="index.html"><img src="../images/logo.png" alt="Roberta Schultz Logo"></a>
        <p>© 2017 All Rights Reserved to Roberta Schultz</p>
     </footer>
 
