--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="Images/mackinsey.jpg" alt="McKinsey Branding">
         <img src="Images/ananas01_270x270.jpg" alt="Ananas Editorial">
       </div>
-      <img class="lrg-img" src="Images/Jiving_banner.png" alt="Jiving Visual Identity">
+      <img class="lrg-img" src="Images/Jiving_Banner.png" alt="Jiving Visual Identity">
     </section>
 
     <footer>
